--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-    "name": "smallgrid",
+    "name": "suspendors",
     "private": true,
-    "version": "1.1.0",
+    "version": "1.1.1",
     "description": "Small Scss grid system for smaller projects",
-    "main": "dist/js/smallgrid.js",
-    "sass": "dist/css/smallgrid.scss",
+    "main": "dist/js/Suspendors.js",
+    "sass": "dist/css/suspendors.scss",
     "author": "Auston Robertson <auston.robertson.business@gmail.com>",
     "license": "MIT",
     "dependencies": {},
