--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "suspendors",
     "private": true,
-    "version": "1.1.1",
+    "version": "1.2.1",
     "description": "Small Scss grid system for smaller projects",
     "main": "dist/js/Suspendors.js",
     "sass": "dist/css/suspendors.scss",
@@ -13,6 +13,7 @@
     "keywords": [
         "css",
         "sass",
+        "javascript-events",
         "mobile-first",
         "responsive",
         "front-end",
@@ -21,6 +22,6 @@
     ],
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/Aulero99/smallgrid.git"
+        "url": "git+https://github.com/Aulero99/suspendors.git"
     }
 }
