--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "suspendors",
-    "private": true,
+    "private": false,
     "version": "1.2.1",
     "description": "Small Scss grid system for smaller projects",
     "main": "dist/js/Suspendors.js",
