--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "version": "1.5.1",
     "description": "Small Scss grid system for smaller projects",
     "main": "dist/js/Suspendors.js",
-    "sass": "dist/css/suspendors.scss",
+    "sass": "dist/scss/suspendors.scss",
+    "style": "dist/css/min.css",
     "author": "Auston Robertson <auston.robertson.business@gmail.com>",
     "license": "MIT",
     "devDependencies": {
