--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
     "private": false,
     "version": "1.6.4",
     "description": "Scss framework with multiple applicable uses",
-    "main": "dist/js/Suspendors.js",
-    "module": "dist/js/Suspendors.esm.js",
+    "main": "js/src/Suspendors.js",
+    "module": "js/src/Suspendors.esm.js",
     "sass": "scss/suspendors.scss",
     "style": "dist/css/suspendors.css",
     "license": "MIT",
